--- a/src/Components/TeaCart/TeaCart.css
+++ b/src/Components/TeaCart/TeaCart.css
@@ -1,10 +1,14 @@
 .tea-container{
   display: grid;
   grid-template-columns: 4fr 1fr;
+
 }
 .product-container{
   display: grid;
   grid-template-columns: repeat(3,1fr);
+  gap: 50px;
+  margin:20px;
+ 
 }
 
 @media screen and (max-width: 480px){
@@ -17,6 +21,8 @@
   .product-container{
     display: grid;
   grid-template-columns: repeat(1,1fr);
+  gap: 20px;
+  margin:10px;
   }
 
 }
