--- a/src/Components/TeaCart/TeaCart.css
+++ b/src/Components/TeaCart/TeaCart.css
@@ -7,14 +7,30 @@
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap: 50px;
-  margin:20px;
+  margin: 20px 20px 20px;
  
 }
 .cart-container{
   border: 5px solid rgba(54, 102, 114, 0.719);
-  margin: 20px 5px;
-  padding: 20px 10px;
+  margin: 20px 0px;
+  padding: 20px 5px;
   border-radius: 10px;
+  background-color: cadetblue;
+}
+.rmv-btn{
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  background-color: rgba(59, 85, 94, 0.685);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0px;
+  border: 2px solid cadetblue;
+}
+h2{
+  font-weight: 700;
+  color: white;
 }
 
 @media screen and (max-width: 480px){
