--- a/src/Components/TeaCart/TeaCart.css
+++ b/src/Components/TeaCart/TeaCart.css
@@ -28,9 +28,9 @@
   margin: 20px 0px;
   border: 2px solid cadetblue;
 }
-h2{
+.text{
   font-weight: 700;
-  color: white;
+  color: rgb(224, 241, 241);
 }
 
 @media screen and (max-width: 480px){
