--- a/src/Components/Tea/Tea.css
+++ b/src/Components/Tea/Tea.css
@@ -31,4 +31,9 @@
     height: 200px;
     padding: 5px;
   }
+  .tea{
+    border: 1px solid rgba(54, 102, 114, 0.719);
+    border-radius: 10px;
+    padding: 0px;
+  }
 }
